syntax = "proto3";
package author;

message Author {
  string id = 1;
  string name = 2;
  string bio = 3;
}

message GetAuthorRequest {
  string author_id = 1;
}

message GetAuthorResponse {
  Author author = 1;
}

message SearchAuthorsRequest {
  string query = 1;
}

message SearchAuthorsResponse {
  repeated Author authors = 1;
}

message AddAuthorRequest {
  Author author = 1;
}

message AddAuthorResponse {
  Author author = 1;
}

service AuthorService {
  rpc GetAuthor(GetAuthorRequest) returns (GetAuthorResponse);
  rpc SearchAuthors(SearchAuthorsRequest) returns (SearchAuthorsResponse);
  rpc AddAuthor(AddAuthorRequest) returns (AddAuthorResponse);
}