syntax = "proto3";
package book;

// Définition du message Book
message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string description = 4;
}

// Messages pour GetBook
message GetBookRequest {
  string book_id = 1;
}

message GetBookResponse {
  Book book = 1;
}

// Messages pour SearchBooks
message SearchBooksRequest {
  string query = 1;
}

message SearchBooksResponse {
  repeated Book books = 1;
}

// Messages pour AddBook
message AddBookRequest {
  Book book = 1;  // Le livre à ajouter (peut inclure ou non un ID)
}

message AddBookResponse {
  Book book = 1;  // Le livre ajouté (avec ID généré si nécessaire)
}

// Définition du service Book
service BookService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
  rpc SearchBooks(SearchBooksRequest) returns (SearchBooksResponse);
  rpc AddBook(AddBookRequest) returns (AddBookResponse);
}