const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const path = require('path');
const connectDB = require('./config/database');
const Author = require('./models/Author');
require('dotenv').config();

// Configuration du protobuf
const authorProtoPath = path.join(__dirname, 'author.proto');
const authorProtoDefinition = protoLoader.loadSync(authorProtoPath, {
    keepCase: true,
    longs: String,
    enums: String,
    defaults: true,
    oneofs: true
});

const authorProto = grpc.loadPackageDefinition(authorProtoDefinition).author;

// Connexion Ã  MongoDB
connectDB();



const authorService = {
    getAuthor: async (call, callback) => {
        try {
            const authorId = call.request.author_id;
            const author = await Author.findById(authorId);
            
            if (!author) {
                callback({
                    code: grpc.status.NOT_FOUND,
                    message: 'Auteur non trouvÃ©'
                });
                return;
            }

            // Conversion explicite de l'ID en chaÃ®ne
            const authorResponse = {
                id: author._id.toString(), // Conversion de l'ID en chaÃ®ne
                name: author.name,
                bio: author.bio
            };

            callback(null, { author: authorResponse });
        } catch (error) {
            callback({
                code: grpc.status.INTERNAL,
                message: 'Erreur lors de la rÃ©cupÃ©ration de l\'auteur'
            });
        }
    },
    
    searchAuthors: async (call, callback) => {
        try {
            const query = call.request.query.toLowerCase();
            const authors = await Author.find({
                $or: [
                    { name: { $regex: query, $options: 'i' } },
                    { bio: { $regex: query, $options: 'i' } }
                ]
            });

            // Mapper les auteurs pour convertir l'ID en chaÃ®ne
            const authorsResponse = authors.map(author => ({
                id: author._id.toString(), // Conversion de l'ID en chaÃ®ne
                name: author.name,
                bio: author.bio
            }));

            callback(null, { authors: authorsResponse });
        } catch (error) {
            callback({
                code: grpc.status.INTERNAL,
                message: 'Erreur lors de la recherche des auteurs'
            });
        }
    },
    
    addAuthor: async (call, callback) => {
        try {
            const authorData = call.request.author;
            const newAuthor = new Author({
                name: authorData.name,
                bio: authorData.bio || ''
            });

            const savedAuthor = await newAuthor.save();

             // Envoi du message Ã  Kafka
      await sendMessage('authors_topic', savedAuthor);  // Envoie l'auteur crÃ©Ã© au topic 'authors_topic'

            // Conversion explicite de l'ID en chaÃ®ne
            const authorResponse = {
                id: savedAuthor._id.toString(), // Conversion de l'ID en chaÃ®ne
                name: savedAuthor.name,
                bio: savedAuthor.bio
            };

            callback(null, { author: authorResponse });
        } catch (error) {
            callback({
                code: grpc.status.INTERNAL,
                message: 'Erreur lors de l\'ajout de l\'auteur'
            });
        }
    }
};



// CrÃ©ation et dÃ©marrage du serveur gRPC
const server = new grpc.Server();
server.addService(authorProto.AuthorService.service, authorService);

const port = process.env.AUTHOR_SERVICE_PORT || 50052;
server.bindAsync(
    `0.0.0.0:${port}`, 
    grpc.ServerCredentials.createInsecure(),
    (err, port) => {
        if (err) {
            console.error('Ã‰chec de la liaison du serveur:', err);
            return;
        }
        console.log(`ðŸ‘¤ Microservice d'auteurs en cours d'exÃ©cution sur le port ${port}`);
        server.start();
    }
);
